# french_flashcards

./: Cargo.toml
src/: main.rs
