[package]
name = "french_flashcards"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.1.19", features = ["fltk-bundled"], git = "https://github.com/fltk-rs/fltk-rs"}
fltk-flex = "0.1"